# Anf-ngerpraktikum

./: CMakeLists.txt  adressable_pq.cpp  contract.cpp  contraction_h2.cpp  dijkstra.cpp  graph.cpp  graph.h  graph_ch.h  graph_ch2.cpp  graph_ch2.h  main.cpp  tests.cpp
